Closed Bug 1016724 Opened 10 years ago Closed 10 years ago

Timecard stamp for gathering complete is worded incorrectly

Categories

(Core :: WebRTC: Networking, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla32

People

(Reporter: bwc, Assigned: bwc)

Details

Attachments

(1 file)

Assignee: nobody → docfaraday
Status: NEW → ASSIGNED
Attachment #8429676 - Flags: review?(rjesup)
Attachment #8429676 - Flags: review?(rjesup) → review+
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/b04ecdf990bd
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: