Bug 1016724 - Make sure the word "gathering" appears in the timecard stamp for complete. r=jesup